# gatOS

./: .gitattributes  .gitignore  ASTROTERM_PLAN.md  CLAUDE.md  Directory.Build.props  EXAMPLE_COMMANDS.md  IDEA_TODOs.md  KSA_GAME_INTEGRATION_IDEA.md  KSA_GAME_INTEGRATION_PLAN.md  LANDING_PROGRAM_PLAN.md  OPENSSH_PLAN.md  OS_ANALYSIS.md  OS_PLAN.md  PRE_M6_CHECKLIST.md  README.md  SPEC_9P_FILESYSTEM.md  STREAM_PLAN.md  THIRD-PARTY-NOTICES.md  gatos.slnx  notes.md  sim_openapi.yml
.github/workflows/: build.yml  (+3 more)
docs/: ARCHITECTURE.md  KSA_CELESTIAL_COORDINATE_FRAMES.md  KSA_INTEGRATION_MATRIX.md  LIGHT_PART_ANALYSIS.md  MILESTONES.md  PARTICLE_ANALYSIS.md  TUTORIAL_DATA_REFERENCE.md  VALIDATION.md
examples/agc/: APOLLO_11_FLIGHT_GUIDE.md  Cargo.toml  README.md  build.rs
examples/agc/apollo11-system/: README.md  make-apollo11-system.ts
examples/agc/csrc/: vagc_shim.c
examples/agc/src/: clockpolicy.rs  discretes.rs  downlink.rs  engines.rs  imu.rs  ksa_quat.rs  lib.rs  padload.rs  pipa.rs  radar.rs  rcs.rs  uplink.rs  vec3.rs
examples/agc/src/dsky/: mod.rs  ui.rs
examples/agc/src/proto/: client.rs  codec.rs  embedded.rs  mod.rs
examples/agc/src/sim/: mod.rs
examples/agc/tests/: live_yaagc.rs
examples/agc/tools/: agc  build-agc.sh  install-agc.sh
examples/dancy-party-rs/: Cargo.toml  README.md
examples/dancy-party-rs/src/: app.rs  color.rs  main.rs  party.rs  profile.rs  source.rs  ui.rs  xkcd.rs
examples/dancy-party-rs/tools/: gen_xkcd.ts
examples/dashboard-rs/: Cargo.toml  README.md
examples/dashboard-rs/src/: api.rs  app.rs  main.rs  ui.rs
examples/gogogo-rs/: Cargo.toml  README.md
examples/gogogo-rs/src/: app.rs  main.rs  source.rs  ui.rs
examples/kecho/: Cargo.toml  README.md
examples/kecho/src/: main.rs  sink.rs
examples/land-o-matic/: Cargo.toml  README.md
examples/land-o-matic/src/: app.rs  lib.rs  logger.rs  main.rs  ui.rs
examples/land-o-matic/src/guidance/: autopilot.rs  cse.rs  frames.rs  gfold.rs  ksa_quat.rs  mod.rs  types.rs  upfg.rs  vehicle.rs
examples/land-o-matic/src/sim/: mod.rs
examples/pressme-rs/: Cargo.toml  README.md  pressme.toml
examples/pressme-rs/src/: app.rs  button.rs  config.rs  main.rs  runner.rs  ui.rs
examples/simfs-dashboard/: Cargo.toml  README.md
examples/simfs-dashboard/src/: app.rs  catalog.rs  main.rs  source.rs  ui.rs  widget.rs
examples/skycaptain/: Cargo.toml  README.md
examples/skycaptain/src/: app.rs  flight.rs  font.rs  frames.rs  ksa_quat.rs  lib.rs  main.rs  plan.rs  sim.rs  simulate.rs  ui.rs  vec3.rs
examples/skycaptain/tests/: integration.rs
examples/starwars/: Cargo.toml  README.md
examples/starwars/src/: app.rs  braille.rs  canvas.rs  main.rs  ui.rs
examples/the90s/: Cargo.toml  README.md  the90s.yaml
examples/the90s/src/: app.rs  config.rs  main.rs  source.rs  ui.rs
gatOS.Bus/: Ccsds.cs  Nmea.cs  ScpiCommandPort.cs  SerialBridge.cs  SerialBridgeConnector.cs  SerialTelemetry.cs  gatOS.Bus.csproj
gatOS.Bus.Tests/: BusCodecTests.cs  SerialBridgeTests.cs  gatOS.Bus.Tests.csproj
gatOS.GameMod/: Mod.cs  ModAssets.cs  gatOS.GameMod.csproj  mod.toml
gatOS.Http/: HttpRequestLine.cs  OpenApi.cs  SimHttpServer.cs  gatOS.Http.csproj
gatOS.Http.Tests/: AudioHttpRoutesTests.cs  HttpServerTests.cs  gatOS.Http.Tests.csproj
gatOS.Logging/: ModLog.cs  PerfStat.cs  ValueStat.cs  gatOS.Logging.csproj
gatOS.Logging.Tests/: ModLogTests.cs  gatOS.Logging.Tests.csproj
gatOS.Mqtt/: SimMqttBroker.cs  gatOS.Mqtt.csproj
gatOS.Mqtt.Tests/: MqttBrokerTests.cs  gatOS.Mqtt.Tests.csproj
gatOS.NineP/: PlaceholderNineP.cs  gatOS.NineP.csproj
gatOS.NineP.Tests/: CodecTests.cs  HostMountTests.cs  PlaceholderTests.cs  ServerConformanceTests.cs  ServerGoldenByteTests.cs  SilentLogSetup.cs  TestTree.cs  VfsScanTests.cs  ZeroCopyReadTests.cs  gatOS.NineP.Tests.csproj
gatOS.SimFs/: AlarmFile.cs  EventsFile.cs  Formats.cs  PlaceholderSimFs.cs  SimFsTree.cs  SimJson.cs  SnapshotTextFile.cs  StreamFile.cs  TelemetrySettings.cs  gatOS.SimFs.csproj
gatOS.SimFs.Tests/: EventsFileTests.cs  FormatsTests.cs  PlaceholderTests.cs  SilentLogSetup.cs  SimFsTreeTests.cs  SimJsonTests.cs  SnapshotMemoTests.cs  SnapshotStoreTests.cs  StreamFileTests.cs  TestData.cs  TestEnv.cs  VendoredQemuSetup.cs  gatOS.SimFs.Tests.csproj
gatOS.Ssh/: IShellChannel.cs  PlaceholderSsh.cs  ShellInputQueue.cs  SshShellChannel.cs  SshShellSession.cs  VmConnectionBroker.cs  gatOS.Ssh.csproj
gatOS.Ssh.Tests/: Fakes.cs  PlaceholderTests.cs  ShellInputQueueTests.cs  SshShellSessionTests.cs  TestEnv.cs  VendoredQemuSetup.cs  gatOS.Ssh.Tests.csproj
gatOS.Vm/: AccelFailureClassifier.cs  DiskLock.cs  DiskManager.cs  GatOsPaths.cs  GuestManifest.cs  IDiskManager.cs  IQemuProcess.cs  OperatingSystemFacts.cs  PortAllocator.cs  QemuCommandBuilder.cs  QemuLocator.cs  QemuProcess.cs  QgaClient.cs  ReadinessProbe.cs  VmHost.cs  VmHostOptions.cs  VmLaunchSpec.cs  VmStartException.cs  VmStatus.cs  gatOS.Vm.csproj
gatOS.Vm.Tests/: AccelFailureClassifierTests.cs  DiskLockTests.cs  DiskManagerTests.cs  Fakes.cs  GatOsPathsTests.cs  GuestManifestTests.cs  PortAllocatorTests.cs  QemuCommandBuilderTests.cs  QemuLocatorTests.cs  QgaClientTests.cs  ReadinessProbeTests.cs  ShutdownLadderTests.cs  TestEnv.cs  VendoredQemuSetup.cs  VmHostTests.cs  gatOS.Vm.Tests.csproj
guest/: README.md  build-image.sh  fetch-guest.ps1  fetch-guest.sh  gatos-banner  gatos-banner.sh  gatos-os-release  gatos-tagline
ideas/: LANDING_PROGRAM_IDEA.md
plans/: AGC_PLAN.md  DEBIAN_PLAN.md  FIX_CURRENT_GAPS_PLAN.md  GATOS_CUSTOM_AUDIO_PLAN.md  GREENFIELD_PERFORMANCE_IMPROVEMENT_PLANS.md  IVA_AND_WELDING.md  PERF_IMPROVEMENT_PLAN.md  SCALING_FEATURE_PLAN.md  UNSCIENCE_THUG_LIFE.md
scope/: FULL_SCOPE.md  ksa-assets-and-versions.md  ksa-read-surface.md  ksa-runtime-coupling.md  ksa-write-surface.md  non-ksa-surface.md
site/: .oxfmtrc.json  .oxlintrc.json  astro.config.mjs  package.json  pnpm-lock.yaml  rehype-katex-strict.mjs  tsconfig.json
spike/: NOTES.md
tools/: Get-QemuImportClosure.ps1  fetch-qemu.ps1  fetch-qemu.sh  qemu-win64-files.txt
(+222 files in other folders)
