[package]
name = "agc"
version = "0.1.0"
edition = "2021"
description = "the Apollo Guidance Computer (Luminary099) flying KSA vessels: yaAGC bridge + ratatui DSKY over the gatOS /sim filesystem"
license = "MIT"
publish = false

[[bin]]
name = "agc-bridge"
path = "src/bin/agc_bridge.rs"

[[bin]]
name = "dsky"
path = "src/bin/dsky.rs"

[[bin]]
name = "agc-padload"
path = "src/bin/agc_padload.rs"

[dependencies]
# ratatui re-exports crossterm, so we use ratatui::crossterm for events + backend — the event and
# backend crate versions then can never drift (the convention across the sibling Rust examples).
ratatui = "0.29"
# Tiny blocking HTTP client for the optional --url (HTTP /v1/fs) source; no TLS feature — the gatOS
# API is plain http:// over slirp. The default source reads the /sim mount directly with std::fs.
ureq = { version = "2", default-features = false }
# Telemetry parsing: /sim/vessels/active/telemetry is one JSON object (Formats.VesselTelemetry).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# A6 embedded mode: link yaAGC's agc_engine.c into agc-bridge via FFI (vagc-sys). Needs a Virtual
# AGC checkout at build time: VIRTUALAGC=/opt/src/virtualagc cargo build --features embedded.
embedded = []

[build-dependencies]
cc = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
