[package]
name = "dancy-party-rs"
version = "0.1.0"
edition = "2021"
description = "A ratatui party-lights console over the gatOS /sim filesystem — cycle interpolated colors across every light on the selected vessels"
license = "MIT"
publish = false

[[bin]]
name = "dancy-party-rs"
path = "src/main.rs"

[dependencies]
# ratatui re-exports crossterm, so we use ratatui::crossterm for events + backend — the event and
# backend crate versions then can never drift.
ratatui = "0.29"
# Tiny blocking HTTP client for the optional --url (HTTP /v1/fs) source; no TLS — the gatOS API is
# plain http:// over slirp. The default source reads the /sim mount directly with std::fs.
ureq = { version = "2", default-features = false, features = ["json"] }
# Only used to read /v1/vessels + /v1/status JSON in the HTTP source.
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
