[package]
name = "dancy-party-rs"
version = "0.1.0"
edition = "2021"
description = "A ratatui party-lights console over the gatOS /sim filesystem — cycle interpolated colors across every light on the selected vessels"
license = "MIT"
publish = false

[[bin]]
name = "dancy-party-rs"
path = "src/main.rs"

[dependencies]
# ratatui re-exports crossterm, so we use ratatui::crossterm for events + backend — the event and
# backend crate versions then can never drift.
ratatui = "0.29"
# Tiny blocking HTTP client for the optional --url (HTTP /v1/fs) source; no TLS — the gatOS API is
# plain http:// over slirp. The default source reads the /sim mount directly with std::fs.
ureq = { version = "2", default-features = false, features = ["json"] }
# Only used to read /v1/vessels + /v1/status JSON in the HTTP source.
serde_json = "1"
# The worker runs on a small current-thread tokio runtime: it drives the animation/battery timers
# and dispatches every light write as a fire-and-forget `spawn_blocking` task (we never await the
# result — the gatOS backend batches writes per game tick, so a write "response" is a whole frame
# away and this program doesn't care). No bespoke writer pool; tokio's blocking pool absorbs the
# concurrent in-flight writes.
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
