[package]
name = "gatos-dashboard"
version = "0.1.0"
edition = "2021"
description = "Interactive ratatui TUI dashboard + flight controls for the gatOS /sim HTTP API"
license = "MIT"
publish = false

[dependencies]
# ratatui re-exports crossterm, so we use ratatui::crossterm for events + backend — the event and
# backend crate versions then can never drift.
ratatui = "0.29"
# Tiny blocking HTTP client; no TLS feature needed — the gatOS API is plain http:// over slirp.
ureq = { version = "2", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
