[package]
name = "kecho"
version = "0.1.0"
edition = "2021"
description = "echo, but it writes one value to many gatOS /sim files concurrently — so a fan-out like `kecho 1 /sim/vessels/by-id/*/lights/*/on` lands in a single game tick instead of one write per tick"
license = "MIT"
publish = false

[[bin]]
name = "kecho"
path = "src/main.rs"

[dependencies]
# All the writes are dispatched onto tokio's blocking pool via `spawn_blocking` (one task per target
# file) and collected with a `JoinSet`, exactly the fire-and-forget shape dancy-party-rs uses — except
# kecho is a short-lived CLI, so it waits for the *whole batch* (one barrier) before exiting rather
# than outliving its writes. `sync` is only for the optional `--jobs` concurrency cap (a Semaphore).
tokio = { version = "1", features = ["rt", "sync"] }
# Tiny blocking HTTP client for the optional `--url` (HTTP /v1/fs) sink; no TLS — the gatOS API is
# plain http:// over slirp. The default sink writes the /sim mount directly with std::fs.
ureq = { version = "2", default-features = false }

[profile.release]
opt-level = "z"
lto = true
strip = true
