[package]
name = "simfs-dashboard"
version = "0.1.0"
edition = "2021"
description = "DIY ratatui dashboard builder over the gatOS /sim filesystem (field-level reads + control widgets)"
license = "MIT"
publish = false

[[bin]]
name = "simfs-dashboard"
path = "src/main.rs"

[dependencies]
# ratatui re-exports crossterm, so we use ratatui::crossterm for events + backend — the event and
# backend crate versions then can never drift.
ratatui = "0.29"
# Tiny blocking HTTP client for the optional --url (HTTP /v1/fs) source; no TLS — the gatOS API is
# plain http:// over slirp. The default source reads the /sim mount directly with std::fs.
ureq = { version = "2", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Dashboard layouts serialize to TOML (matches the project's gatos.toml convention; human-editable).
toml = "0.8"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
