[package]
name = "the90s"
version = "0.1.0"
edition = "2021"
description = "A ratatui 90's-flash-app soundboard over the gatOS /sim/audio userland playback surface"
license = "MIT"
publish = false

[[bin]]
name = "the90s"
path = "src/main.rs"

[dependencies]
# ratatui re-exports crossterm, so we use ratatui::crossterm for events + backend — the event and
# backend crate versions then can never drift.
ratatui = "0.29"
# Tiny blocking HTTP client for the optional --url (HTTP /v1) source; no TLS — the gatOS API is
# plain http:// over slirp. The default source reads/writes the /sim mount directly with std::fs.
ureq = { version = "2", default-features = false, features = ["json"] }
# Only used to read the /v1/audio/files JSON clip list in the HTTP source.
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
